--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -1,20 +1,38 @@
-.gpt3__header {
-  display: flex;
-  flex-direction: column;
+.gpt3__navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 6rem;
+    border-bottom-color: #fff;
+    border-bottom-width: 1px;
+    border-style: solid;
 }
 
-.gpt3__header .generate {
-  margin-top: 40px;
-  display: flex;
-  justify-content: center;
+.gpt3__navbar-links {
+    flex: 1;
+    display: flex;
+    justify-items: flex-start;
+    align-items: center;
 }
 
-.gpt3__header .generate span{
-  color: #2563eb;
+.gpt3__navbar-links_logo {
+    margin-right: 2rem;
 }
 
-.gpt3__header .generate button {
-    width: 30%;
+.gpt3__navbar-links_logo img {
+    width: 200x;
+    height: 50px;
+}
+
+.gpt3__navbar-sign {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.gpt3__navbar-sign button {
+    flex: 1;
+    width: 100%;
     min-height: 50px;
     font-family: var(--font-family);
     font-weight: 400;
@@ -30,42 +48,4 @@
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-}
-
-.gpt3__header h1 {
-  color:#fff;
-  font-weight: 400;
-  font-size: 3.75rem;
-}
-
-.gpt3__header-content {
-  display: flex;
-  flex-direction: row;
-  margin-top: 40px;
-  justify-content: space-around;
-}
-
-.gpt3__header-content .original {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 45%;
-}
-
-.gpt3__header-content .generated {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 45%;
-}
-
-.gpt3__header-content h2 {
-  color:#fff;
-  font-size: 16px;
-}
-
-.gpt3__header-content img {
-  margin-top: 10px;
-  width: 100%;
-  border-radius: 5%;
 }
