--- a/frontend/src/components/dream/dream.css
+++ b/frontend/src/components/dream/dream.css
@@ -72,28 +72,52 @@
 
 .gpt3__header-content .Uploaded {
   margin-top: 10px;
-  border-radius: 5%;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 1px;
+  border-radius: 5px;
+  border: 1px solid hsla(0, 0%, 100%, 0.2);
   width: 100%;
   height: 100%;
 }
 
 .upload-container {
   margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 150px;
   border-style: solid;
   border-color: #fff;
   border-width: 1px;
-  border-radius: 5%;
+  border-radius: 5px;
   border-style: dashed;
 }
 
 .upload-container p {
-  color: #fff;
+  color:#2563eb;
+}
+
+.desc {
+  margin-top: 10px;
+  border-radius: 5px;
+  color: #b9b9bf;
+  font-size: 20px;
+  height: 150px;
+  line-height: 1.6;
+}
+
+textarea {
+  background: transparent;
+  border: 1px solid hsla(0, 0%, 100%, 0.2);
+  border-radius: 0;
+  box-shadow: none;
+  color: #565660;
+  font-family: IBM Plex Mono, monospace;
+  font-size: 17px;
+  height: 64px;
+  line-height: 28px;
+  outline: 0;
+  padding: 13px 15px 13px 27px;
+  width: 100%;
+  resize: none;
 }
